# rust-k8s-operator

./: Cargo.toml
src/: crd.rs  echo.rs  finalizer.rs  main.rs
