[package]
name = "rust-k8s-operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = [
    "macros",
    "rt-multi-thread",
]}
kube = { version = "0.88", default-features = true, features = [
    "derive",
    "runtime",
]} # Kubernetes client
k8s-openapi = { version = "0.21", default-features = false, features = [
    "v1_29",
]} # Kubernetes OpenAPI